--- a/dev/index.html
+++ b/dev/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <div>웹 테스트 페이지</div>
-<script type="module" src="./main.js"></script>
+<script type="module" src="./test.js"></script>
 </body>
 </html>
