--- a/dev/index.html
+++ b/dev/index.html
@@ -4,7 +4,8 @@
   <title>About</title>
 </head>
 <body>
-  <div>웹 테스트 페이지</div>
+  <div id="test" style="color:blue">웹 테스트 페이지</div>
+
 <script type="module" src="./test.js"></script>
 </body>
 </html>
