--- a/dev/webTest/frontend/index.html
+++ b/dev/webTest/frontend/index.html
@@ -6,6 +6,6 @@
 <body>
   <div id="test" style="color:blue">웹 테스트 페이지</div>
 
-<script type="module" src="./test.js"></script>
+<script type="module" src="./src/js/index.js"></script>
 </body>
 </html>
